# cppecs

./: .gitignore  CMakeLists.txt  README.md
3rd/: CMakeLists.txt  cppunit.cmake
include/cppecs/: cppecs.h  cppecs.hpp  entity.hpp  sparse_set.hpp  utility.hpp
src/: cppecs.cpp
test/: main.cpp  test-ecs.cpp  test-ecs.h  test-ecs.hpp
